# LAV

./: .gitignore  AUTHORS.TXT  LICENSE.TXT  Makefile  Makefile.common  Makefile.config  Makefile.config.in  Par  README.txt  Seq  configure  coreDump  format  izlaz  status
Output/: br2.txt  branisalva.txt  branislava.txt  branislava1.txt  branislava2.txt  branislava4.txt  main_line_10_assemblyLine_36  main_line_11_assemblyLine_42  main_line_12_assemblyLine_46  main_line_12_assemblyLine_48  main_line_13_assemblyLine_53  main_line_14_assemblyLine_58  main_line_15_assemblyLine_62  main_line_7_assemblyLine_19  main_line_8_assemblyLine_25  main_line_9_assemblyLine_29  main_line_9_assemblyLine_31  milena.txt
Release+Asserts/lib/: .dir
autoconf/: configure  configure.ac
autoconf/autom4te.cache/: output.0  traces.0
docs/: doxygen.cfg  intro  overview
examples/test1/: __ex6.txt  funkcija1.txt  funkcijaIpokazivaci.txt  global.txt  if15.c  if15.c~  if15.txt  intchar.txt  malloc.txt  malloc3.c  niz0.txt  nizovi.c  pokazivaci.txt  razno.c  test_z3_bv_arr_ack  test_z3_bv_arr_euf
examples/test1/proba/: adrese.c
include/: config.h  config.h.in
include/Threads/: CancelableThread.h  Event.h  FixedQueue.h  SignalingThread.h  ThreadPool.h
include/expression/auxiliary/: Names.h  hash_set.h
include/expression/expressions/: Expression.h  ExpressionFactory.h  ExpressionNode.h  ExpressionTypes.h  NumeralNode.h  NumeralTypes.h  OperatorNode.h  Sorts.h
include/expression/output/: Output.h  OutputFormater.h  OutputFormaterType.h  SMTFormater.h  TextFormater.h
include/lav/Internal/: InstructionInfoTable.h  LAckermannization.h  LBlock.h  LBlockStore.h  LCommon.h  LConstraints.h  LExpressionTransformation.h  LFunction.h  LInstruction.h  LJump.h  LLav.h  LLocalCondition.h  LMerge.h  LModule.h  LSolver.h  LState.h  LTypes.h
include/lav/Misc/: misc.h
include/lav/Test/: test.h
include/lav/Threads/: CancelableThread.h  Event.h  FixedQueue.h  FutureResult.h  SignalingThread.h  ThreadPool.h
include/lav/Transformation/: InlineAll.h  LLoop.h  LSimplify.h
include/solvers/solver-interfaces/: Formula.h  FormulaFactory.h  FormulaVector.h  auxiliary.hpp  bit-vector.hpp  expression.hpp  functional-ext.hpp
include/solvers/syntax/: function.hpp  symbol-table.hpp  syntax-tree.hpp  type.hpp  typed-identifier.hpp
lib/: Makefile
lib/Core/: InstructionInfoTable.cpp  LAckermannization.cpp  LBlock.cpp  LBlockStore.cpp  LCommon.cpp  LConstraints.cpp  LExpressionTransformations.cpp  LFunction.cpp  LFunction.cpp~  LInstruction.cpp  LLav.cpp  LModule.cpp  LSimplify.cpp  LSolver.cpp  LSolver.cpp~  LState.cpp  Makefile
lib/Core/Release+Asserts/: .dir  InstructionInfoTable.d  LAckermannization.d  LBlock.d  LBlockStore.d  LCommon.d  LConstraints.d  LExpressionTransformations.d  LFunction.d  LInstruction.d  LLav.d  LModule.d  LSimplify.d  LSolver.d  LState.d
lib/Expression/: Expression.cpp  ExpressionFactory.cpp  ExpressionNode.cpp  Makefile  Names.cpp  NumeralNode.cpp  OperatorNode.cpp  Output.cpp  OutputFormater.cpp  SMTFormater.cpp  Sorts.cpp  TextFormater.cpp
lib/Expression/Release+Asserts/: .dir  Expression.d  ExpressionFactory.d  ExpressionNode.d  Names.d  NumeralNode.d  OperatorNode.d  Output.d  OutputFormater.d  SMTFormater.d  Sorts.d  TextFormater.d
lib/Misc/: Makefile  misc.cpp
lib/Misc/Release+Asserts/: .dir  misc.d
lib/Solvers/: Formula.cpp  FormulaFactory.cpp  FormulaVector.cpp  Makefile  auxiliary.cpp  boolector-instance.cpp  bv-expression-boolector.cpp  bv-expression-mathsat.cpp  bv-expression-yices.cpp  bv-expression-z3.cpp  expression.cpp  la-expression-mathsat.cpp  la-expression-yices.cpp  la-expression-z3.cpp  mathsat-instance.cpp  yices-instance.cpp  z3-instance.cpp  z3-instance.cpp~
lib/Solvers/Release+Asserts/: .dir  Formula.d  FormulaFactory.d  FormulaVector.d  auxiliary.d  boolector-instance.d  bv-expression-boolector.d  bv-expression-mathsat.d  bv-expression-yices.d  bv-expression-z3.d  expression.d  la-expression-mathsat.d  la-expression-yices.d  la-expression-z3.d  mathsat-instance.d  yices-instance.d  z3-instance.d
lib/TestLAV/: Makefile  test.cpp
lib/TestLAV/Release+Asserts/: .dir  test.d
lib/Threads/: CancelableThread.cpp  Event.cpp  FutureResult.cpp  Makefile  Makefile~  SignalingThread.cpp  ThreadPool.cpp
lib/Threads/Release+Asserts/: .dir  CancelableThread.d  Event.d  SignalingThread.d  ThreadPool.d
lib/Transformation/: InlineAll.cpp  LLoop.cpp  LSimplify.cpp  Makefile
lib/Transformation/Release+Asserts/: .dir  InlineAll.d  LLoop.d  LSimplify.d
solvers/: solvers
solvers/mathsat/include/: mathsat.h
solvers/yices/include/: yices_c.h  yicesl_c.h
tests/branislava_tests/: branisalva.c  branisalva.c~  branisalva.s  pr  pr.ll  pr2.o.s  primer1.c  primer1.c~  primer1_err_output.txt  primer1_output.txt  primer2.c  primer2.c~  primer2.o.ll  primer2.o.s  primer2.s  primer2_err_output.txt  primer2_output.txt
tests/branislava_tests/Output/: branisalva.txt  milena.txt  pr2.txt
tests/parallel/: bfunkcije.c
tests/regression/: clean  differences_old_new_boolector  run_tests
tests/regression/RegressionVerification/: runVerification
tests/regression/lav-ex1/: ex10-1.c  ex10-2.c  ex10-2.txt  ex10-v.c  ex100-1.c  ex100-2.c  ex100-2.txt  ex100-v.c  ex100-v.txt  ex11-1.c  ex11-1.txt  ex11-2.c  ex11-v.c  ex11-v.txt  ex12-1.c  ex12-2.c  ex12-2.txt  ex12-v.c  ex12-v.txt  ex15-1.c  ex15-2.c  ex15-v.c  ex2-1.c  ex2-1.txt  ex2-2.c  ex2-v.c  ex20-1.c  ex20-1.txt  ex20-2.c  ex20-v.c  ex20-v.txt  ex30-1.c  ex30-2.c  ex30-v.c  ex40-1.c  ex40-2.c  ex40-v.c  ex5-1.c  ex5-2.c  ex5-2.txt  (+21 more)
tests/regression/modeli/: ProgramsList  ff.c  ff.txt  fff.c  fff.txt  ffff.c  ffff.txt  model  podeli_line_50_16_assemblyLine_83  ppodeli_line_61_25_10_assemblyLine_29  pppodeli_line_70_34_18_9_assemblyLine_30  test
tests/regression/small_sb/: ex1.txt  ex10.c  ex10.txt  ex11.c  ex11.txt  ex12.txt  (+79 more)
tools/: Makefile
tools/CfgLAV/: Makefile  cfgLAV.cpp
tools/LAV/: LAV.cpp  Makefile  Makefile~
tools/StatistikeLAV/: Makefile  Statistike.cpp
tools/TestLAV/: Makefile  testLAV.cpp
(+1518 files in other folders)
